<resources>
    <string name="app_name">BreakingBad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

       <string name="occupation">Occupation:</string>
    <string name="name">Name:</string>
    <string name="nickname">Nickname:</string>
    <string name="birthday">Birthday:</string>
    <string name="status">Status:</string>
    <string name="appearance">Appearance:</string>
    <string name="portrayed">Portrayed:</string>
    <string name="author">author:</string>
</resources>