<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.example.breakingbad.characters_feature.domain.model.CharacterModel" />
        <variable
            name="viewModel"
            type="com.example.breakingbad.characters_feature.peresentation.fragment.character_info.view_model.CharacterInfoViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".characters_feature.peresentation.fragment.character_info.CharacterInfoFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motion_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="80dp"
                app:layoutDescription="@xml/fragment_character_info_scene"
                app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">


                <ImageView
                    android:id="@+id/iv_character_cover"
                    setCoverPicture="@{character.img}"
                    android:layout_width="0dp"
                    android:layout_height="1000dp"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/rjwhiter" />

                <View
                    android:id="@+id/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:alpha="0.0"
                    android:background="@drawable/characters_gradient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/tv_character_name"
                    setCharacterName="@{character}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="nickname" />


                <TextView
                    android:id="@+id/tv_character_nickName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@{character.nickname}"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    tools:text="nickname" />

                <ImageView
                    android:id="@+id/iv_character_profile"
                    setProfilePicture="@{character.img}"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_margin="15dp"
                    android:contentDescription="TODO"
                    android:scaleType="fitXY"
                    tools:src="@drawable/rjwhiter" />


            </androidx.constraintlayout.motion.widget.MotionLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Name:" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{character.name}"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Name:" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Nickname:" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{character.nickname}"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="nickName" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Birthday:" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:drawablePadding="8dp"
                        android:text="@{character.birthday}"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_baseline_calendar_today_24"
                        tools:text="2/10/2002" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Status:" />

                    <TextView
                        setStatus="@{character.status}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Presumed dead" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appearance"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Appearance:" />

                    <TextView
                        setAppearance="@{character.appearance}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="appearance" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/portrayed"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Portrayed:" />

                    <TextView
                        setStatus="@{character.portrayed}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="portrayed" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/occupation"
                        android:textColor="@color/yellow"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Occupation:" />

                    <TextView
                        setOccupation="@{character.occupation}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#B8B8B8"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        tools:text="Occupation" />
                </LinearLayout>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:onClick="@{()->viewModel.addCharacterToFavorite(character)}"
                    tools:background="@drawable/ic_baseline_favorite_24"
                    setFavoriteButtonIcon="@{character}"
                    android:contentDescription="TODO" />
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>